@@ -1,5 +1,17 @@
 package com.benine.backend.camera.ipcameracontrol;
 
+import com.benine.backend.LogEvent;
+import com.benine.backend.camera.Camera;
+import com.benine.backend.camera.CameraConnectionException;
+import com.benine.backend.camera.CameraController;
+import com.benine.backend.camera.FocussingCamera;
+import com.benine.backend.camera.IrisCamera;
+import com.benine.backend.camera.MovingCamera;
+import com.benine.backend.camera.Position;
+import com.benine.backend.camera.ZoomingCamera;
+
+import org.json.simple.JSONObject;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
@@ -8,10 +20,6 @@ import java.net.URL;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
 
-import com.benine.backend.camera.*;
-import org.json.simple.JSONObject;
-
-import com.benine.backend.LogEvent;
 
 /**
  * Class to communicate with an IP Camera.
@@ -99,7 +107,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
    * @return tilt position in degrees.
    */
   private double convertTiltToDouble(String tilt) {
-    return (int)(((Integer.valueOf(tilt, 16) - 7284) / 121.3541667) + 0.5) - 30;
+    return (int)((Integer.valueOf(tilt, 16) - 7284) / 121.3541667 + 0.5) - 30;
   }
  
   /**
@@ -110,7 +118,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   private String convertTiltToHex(double tilt) {
     tilt = Math.min(210, tilt);
     tilt = Math.max(-30, tilt);
-    tilt = ((tilt + 30) * 121.3541667) + 7284;
+    tilt = (tilt + 30) * 121.3541667 + 7284;
     return Integer.toHexString((int) (tilt + 0.5));
   }
   
@@ -131,7 +139,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
    * @return pan position in degrees.
    */
   private double convertPanToDouble(String pan) {
-    return (int)(((Integer.valueOf(pan, 16) - 11530) / 121.3628571) + 0.5) - 175;
+    return (int)((Integer.valueOf(pan, 16) - 11530) / 121.3628571 + 0.5) - 175;
   }
   
   /**
@@ -142,7 +150,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   private String convertPanToHex(double pan) {
     pan = Math.min(175, pan);
     pan = Math.max(-175, pan);
-    pan = ((pan + 175) * 121.3628571) + 11530;
+    pan = (pan + 175) * 121.3628571 + 11530;
 
     return Integer.toHexString((int) (pan + 0.5));
   }
@@ -227,7 +235,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   /**
    * Set the control of the iris to on.
    * @param on true for auto iris on.
-   * @throws IpcameraConnectionException when command can not be completed.
+   * @throws CameraConnectionException when command can not be completed.
    */
   public void setAutoIrisOn(boolean on) throws CameraConnectionException {
     CameraController.logger.log("Changing auto iris.", LogEvent.Type.INFO);
@@ -241,7 +249,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   /**
    * Request if the auto iris is on.
    * @return true if the auto iris is on.
-   * @throws IpcameraConnectionException when command can not be completed.
+   * @throws CameraConnectionException when command can not be completed.
    */
   public boolean isAutoIrisOn() throws CameraConnectionException {
     CameraController.logger.log("Checking auto iris.", LogEvent.Type.INFO);
@@ -264,7 +272,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   * 1 is closed iris.
   * 99 is open iris.
   * @param pos to set the iris to.
-  * @throws IpcameraConnectionException when command can not be completed.
+  * @throws CameraConnectionException when command can not be completed.
   */
   public void setIrisPos(int pos) throws CameraConnectionException {
     pos = Math.max(1, pos);
@@ -275,7 +283,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   /**
    * Get the current iris position.
    * @return the current iris position.
-   * @throws IpcameraConnectionException when command can not be completed.
+   * @throws CameraConnectionException when command can not be completed.
    */
   public int getIrisPos() throws CameraConnectionException {
     CameraController.logger.log("Get iris position.", LogEvent.Type.INFO);
@@ -305,7 +313,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
    * @throws CameraConnectionException when command can not be completed.
    */
   public void zoomTo(int zpos) throws CameraConnectionException {
-	CameraController.logger.log("Zoom to zoom position.", LogEvent.Type.INFO);
+    CameraController.logger.log("Zoom to zoom position.", LogEvent.Type.INFO);
     zpos = Math.max(0, zpos);
     zpos = Math.min(2730, zpos);
     sendCommand("%23AXZ" + Integer.toHexString(zpos + 1365));
@@ -343,10 +351,18 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
     String res = null;
     try {
       InputStream com = new URL("http://" + ipaddress + "/cgi-bin/aw_ptz?cmd=" + cmd + "&res=1").openStream();
-      BufferedReader buf = new BufferedReader(new InputStreamReader(com));
-      res = buf.readLine();
-      com.close();
-    } catch (IOException excep) {
+      try {
+        BufferedReader buf = new BufferedReader(new InputStreamReader(
+            com, "UTF8"));
+        res = buf.readLine();
+        com.close();
+      } catch (IOException excep) {
+        throw 
+          new IpcameraConnectionException("Sending command to camera at" + ipaddress + " failed");
+      } finally {
+        com.close();
+      }
+    } catch (IOException e) {
       throw new IpcameraConnectionException("Sending command to camera at" + ipaddress + " failed");
     }
     
@@ -360,22 +376,24 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   @Override
   public String toJSON() throws CameraConnectionException {
     JSONObject json = new JSONObject();
-    json.put("id", new Integer(this.id));
+    json.put("id", Integer.valueOf(this.id));
     try {
       json.put("pan", new Double(getPosition().getPan()));
       json.put("tilt", new Double(getPosition().getTilt()));
       json.put("zoom", new Double(getZoomPosition()));
       json.put("focus", new Double(getFocusPos()));
-      json.put("autofocus", new Boolean(isAutoFocusOn()));
+      json.put("autofocus", Boolean.valueOf(isAutoFocusOn()));
       json.put("iris", new Double(getIrisPos()));
-      json.put("autoiris", new Boolean(isAutoIrisOn()));
-      json.put("videostream", new Boolean(getStreamLink()));
+      json.put("autoiris", Boolean.valueOf(isAutoIrisOn()));
+      json.put("videostream", Boolean.valueOf(getStreamLink()));
     } catch (Exception e) {
       //TODO log not possible yet because logger acts funny when used in multiple threads (httpha
+      System.out.println(e.toString());
     }
     return  json.toString();
 
   }
+  
   /**
    * Sets the id of this camera.
    * @param id the id of this camera
@@ -383,6 +401,7 @@ public class IPCamera implements Camera, MovingCamera, IrisCamera, ZoomingCamera
   public void setId(int id) {
     this.id = id;
   }
+  
   /**
    * Gets the id of this camera.
    * @return the id of this camera
